# Engine

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py
apps/editor/: CMakeLists.txt  asharia.package.json  vke.package.json
apps/editor/resources/: asharia-editor.rc  vke-editor.rc
apps/editor/resources/i18n/: en-US.json  zh-Hans.json
apps/editor/shaders/: imgui_srgb_color.slang
apps/editor/src/: editor_action.cpp  editor_action.hpp  editor_app.cpp  editor_app.hpp  editor_app_config.cpp  editor_app_config.hpp  editor_app_registration.cpp  editor_app_registration.hpp  editor_app_run_completion.cpp  editor_app_run_completion.hpp  editor_app_services.cpp  editor_app_services.hpp  editor_asset_catalog.cpp  editor_asset_catalog.hpp  editor_asset_catalog_report.cpp  editor_asset_catalog_report.hpp  editor_asset_catalog_smoke.cpp  editor_asset_catalog_smoke.hpp  editor_asset_icon.cpp  editor_asset_icon.hpp  editor_asset_import_settings_command.cpp  editor_asset_import_settings_command.hpp  editor_command.cpp  editor_command.hpp  editor_command_smoke.cpp  editor_command_smoke.hpp  editor_context.cpp  editor_context.hpp  editor_dirty_state.cpp  editor_dirty_state.hpp  editor_dirty_state_smoke.cpp  editor_dirty_state_smoke.hpp  editor_dock_layout.cpp  editor_dock_layout.hpp  editor_event.cpp  editor_event.hpp  editor_extension.cpp  editor_extension.hpp  editor_frame_debug_preview.cpp  editor_frame_debugger.cpp  (+93 more)
apps/editor/src/native_bridge/: frame_debugger_native_api.cpp  frame_debugger_native_api.hpp  frame_debugger_native_smoke.cpp  frame_debugger_native_smoke.hpp  viewport_native_api.cpp  viewport_native_api.hpp  viewport_native_smoke.cpp  viewport_native_smoke.hpp
apps/editor/src/panels/: asset_browser_panel.cpp  asset_browser_panel.hpp  editor_settings_panel.cpp  editor_settings_panel.hpp  frame_debugger_panel.cpp  frame_debugger_panel.hpp  inspector_panel.cpp  inspector_panel.hpp  log_panel.cpp  log_panel.hpp  render_graph_panel.cpp  render_graph_panel.hpp  render_graph_snapshot_details.cpp  render_graph_snapshot_details.hpp  render_graph_snapshot_format.cpp  render_graph_snapshot_format.hpp  render_graph_snapshot_view.cpp  render_graph_snapshot_view.hpp  scene_tree_panel.cpp  scene_tree_panel.hpp  scene_view_panel.cpp  scene_view_panel.hpp  ui_style_preview_panel.cpp  ui_style_preview_panel.hpp
apps/sample-viewer/: CMakeLists.txt  asharia.package.json  vke.package.json
apps/sample-viewer/src/: main.cpp  scriptlab_host.cpp
engine/core/: CMakeLists.txt  asharia.package.json  vke.package.json
engine/core/include/asharia/core/: error.hpp  file_io.hpp  log.hpp  result.hpp  version.hpp
engine/core/include/vke/core/: error.hpp  log.hpp  result.hpp  version.hpp
engine/core/src/: atomic_file_posix.cpp  atomic_file_windows.cpp  file_io.cpp  file_io_internal.hpp  log.cpp
engine/core/tests/: file_io_tests.cpp
engine/host-runtime/: CMakeLists.txt  asharia.package.json
engine/host-runtime/include-contract/asharia/host_runtime/: factory_lifecycle_contexts.hpp  process_application.hpp  static_contribution_contract.hpp  static_factory_callbacks.hpp  static_factory_provider.hpp
engine/host-runtime/include-current-image/asharia/host_runtime/: current_image_activation_descriptor_provider_access.hpp
engine/host-runtime/include-provider/asharia/host_runtime/: static_factory_instance_token_provider_access.hpp
engine/host-runtime/include/asharia/host_runtime/: activation_eligibility.hpp  admitted_static_factory_recording.hpp  process_contribution_registry.hpp  process_scope.hpp  (+5 more)
engine/host-runtime/src/: activation_eligibility.cpp  activation_eligibility_state.hpp  admitted_static_factory_callback_table_access.cpp  admitted_static_factory_callback_table_access.hpp  admitted_static_factory_recording.cpp  factory_lifecycle_context_access.hpp  host_activation_blueprint_projection_state.hpp  process_contribution_activation_lease.cpp  process_contribution_activation_lease.hpp  process_contribution_registry.cpp  process_contribution_registry_state.hpp  process_scope.cpp  process_scope_cleanup.cpp  process_scope_internal.hpp  process_scope_preflight.cpp  process_scope_start.cpp  process_scope_state.hpp  process_scope_stop.cpp  static_factory_callback_table.cpp  static_factory_callback_table_internal.hpp  static_factory_callback_table_private_access.hpp  static_factory_callback_table_state.hpp  static_factory_registration.cpp  static_factory_registration_snapshot_json.cpp  static_factory_registration_state.cpp  static_factory_registration_state.hpp
engine/host-runtime/tests/: activation_admission_tests.cpp  activation_eligibility_test_support.cpp  activation_eligibility_test_support.hpp  activation_eligibility_tests.cpp  admitted_static_factory_recording_tests.cpp  current_image_activation_test_provider.cpp  current_image_activation_test_provider.hpp  process_scope_cleanup_tests.cpp  process_scope_contract_tests.cpp  process_scope_contribution_contract_tests.cpp  process_scope_contribution_lifecycle_tests.cpp  process_scope_preflight_tests.cpp  process_scope_startup_tests.cpp  process_scope_synthetic_provider.cpp  process_scope_synthetic_provider.hpp  process_scope_test_support.cpp  process_scope_test_support.hpp  process_scope_tests.cpp  process_scope_zero_contribution_tests.cpp  static_contribution_accessor_tests.cpp  static_contribution_accessor_tests.hpp  static_factory_callback_table_tests.cpp  static_factory_callback_table_tests.hpp  static_factory_registration_snapshot_json_tests.cpp  static_factory_registration_tests.cpp
engine/platform/: CMakeLists.txt  asharia.package.json  vke.package.json
tools/asset-processor/: CMakeLists.txt  asharia.package.json
tools/asset-processor/src/: asset_processor_dry_run.cpp  asset_processor_dry_run.hpp  asset_processor_execute.cpp  asset_processor_execute.hpp  asset_processor_project_input.cpp  asset_processor_project_input.hpp  asset_processor_smoke.cpp  asset_processor_smoke.hpp  asset_processor_text.cpp  asset_processor_text.hpp  main.cpp
(+1242 files in other folders)
